Test/git-issues/git-issue-845-comments.dfy.expect
git-issue-845-comments.dfy(11,0): Error: rbrace expected
1 parse errors detected in git-issue-845-comments.dfy
